--- a/carla_env/config.yaml
+++ b/carla_env/config.yaml
@@ -1,34 +1,56 @@
 carla:
-  host: "localhost"
-  timeout: 30.0
-  timestep: 0.05
-  retries_on_error: 30
-  res_x: 1280
-  res_y: 720
-  quality_level: "Epic"
-  synchronous_mode: true
-  enable_rendering: true
-  show_display: true
+    host: "localhost"
+    timeout: 30.0
+    timestep: 0.05
+    retries_on_error: 30
+    res_x: 1280
+    res_y: 720
+    quality_level: "Epic"
+    synchronous_mode: true
+    enable_rendering: true
+    show_display: true
 
 experiment:
-  town: "Town10HD_Opt"
-  weather: "ClearNoon"
-  hero_model: "vehicle.lincoln.mkz_2020"
-  sensors: 
-    camera:
-      type: "sensor.camera.rgb"
-      image_size_x: 800
-      image_size_y: 600
-      fov: 90
-      transform: "1, 0, 1.5, 0, 0, 0"
-    lidar:
-      type: "sensor.lidar.ray_cast"
-      range: 20
-    radar:
-      type: "sensor.other.radar"
-      range: 20
-  num_vehicles: 50
-  num_walkers: 20
-  tm_hybrid_mode: false
-  seed: true
-
+    town: "Town10HD_Opt"
+    weather: "ClearNoon"
+    hero_model: "vehicle.lincoln.mkz_2020"
+    sensors: 
+        camera:
+            type: "sensor.camera.rgb"
+            bloom_intensity: 0.675
+            fov: 90.0
+            fstop: 1.4
+            image_size_x: 800
+            image_size_y: 600
+            iso: 100.0
+            gamma: 2.2
+            lens_flare_intensity: 0.1
+            sensor_tick: 0.0
+            shutter_speed: 200.0
+            transform: "1, 0, 1.5, 0, 0, 0"
+        lidar:
+            type: "sensor.lidar.ray_cast"
+            channels: 32
+            range: 100.0
+            points_per_second: 56000
+            rotation_frequency: 10.0
+            upper_fov: 10.0
+            lower_fov: -30.0
+            horizontal_fov: 360.0
+            atmosphere_attenuation_rate: 0.004
+            dropoff_general_rate: 0.45
+            dropoff_intensity_limit: 0.8
+            dropoff_zero_intensity: 0.4
+            sensor_tick: 0.0
+            noise_stddev: 0.0
+        radar:
+            type: "sensor.other.radar"
+            horizontal_fov: 30.0
+            points_per_second: 1500
+            range: 100.0
+            sensor_tick: 0.0
+            vertical_fov: 30.0
+    num_vehicles: 50
+    num_walkers: 20
+    tm_hybrid_mode: false
+    seed: true
